# asfy-bright

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: aur.yml
css/: style.css
src/: lib.rs  main.rs
src/bright/: br_listener.rs  mod.rs
src/config/: config.rs  mod.rs  models.rs
src/ui/: bright_bar.rs  mod.rs
systemd/: asfy-bright.service
tests/: custom_config.toml  test_config.rs
