[package]
name = "asfy-bright"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "asfybright"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-channel = "2.5.0"
dirs = "6.0.0"
glib = { version = "0.22.5", features = ["v2_88"] }
gtk4 = { version = "0.11.2", default-features = false, features = ["v4_22"] }
gtk4-layer-shell = "0.8.0"
nix = "0.31.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
